--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -286,6 +286,7 @@
 			</form>
 		</div>
 	</main>
+	<script type="text/javascript" src="/lib/browser-polyfill/chrome-browser-polyfill.js"></script>
 	<script type="text/javascript" src="../bg/ui-options.js"></script>
 </body>
 
