--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -174,6 +174,12 @@
 							altering the document.</p>
 						<p class="notice">It is recommended to <u>check</u> this option</p>
 					</li>
+					<li data-options-label="insertTextBodyLabel"> <span class="option">Option: make text
+							searchable</span>
+						<p>Check this option to insert the text content of the saved page into the auto-extracting HTML
+							file. This allows you, for example, to search for saved pages by text.</p>
+						<p class="notice">It is recommended to <u>check</u> this option</p>
+					</li>
 					<li data-options-label="removeImportsLabel"> <span class="option">Option: remove HTML imports</span>
 						<p>Check this option to remove all link elements used to import HTML documents. Checking this
 							option can help to reduce the size of the file without altering the document.</p>
