--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -73,6 +73,10 @@
 				<input type="checkbox" id="compressHTMLInput">
 			</div>
 			<div class="option">
+				<label for="insertTextBodyInput" id="insertTextBodyLabel"></label>
+				<input type="checkbox" id="insertTextBodyInput">
+			</div>
+			<div class="option">
 				<label for="removeImportsInput" id="removeImportsLabel"></label>
 				<input type="checkbox" id="removeImportsInput">
 			</div>
