added a note about "make text searchable" option

--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -177,7 +177,8 @@
 					<li data-options-label="insertTextBodyLabel"> <span class="option">Option: make text
 							searchable</span>
 						<p>Check this option to insert the text content of the saved page into the auto-extracting HTML
-							file. This allows you, for example, to search for saved pages by text.</p>
+							file. This allows you, for example, to search for saved pages by text. Unchecking this
+							option will reduce the size of the saved file.</p>
 						<p class="notice">It is recommended to <u>check</u> this option</p>
 					</li>
 					<li data-options-label="removeImportsLabel"> <span class="option">Option: remove HTML imports</span>
