--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -258,7 +258,7 @@
 				<input type="file" id="fileInput" hidden>
 			</div>
 		</div>
-		<div id="formResetContainer" class="popup" hidden>
+		<div id="formResetContainer" class="popup">
 			<form class="popup-content">
 				<header>
 					<span id="resetConfirmLabel"></span>
@@ -270,7 +270,7 @@
 				</footer>
 			</form>
 		</div>
-		<div id="formConfirmContainer" class="popup" hidden>
+		<div id="formConfirmContainer" class="popup">
 			<form class="popup-content">
 				<header>
 					<span id="confirmLabel"></span>
@@ -281,7 +281,7 @@
 				</footer>
 			</form>
 		</div>
-		<div id="formPromptContainer" class="popup" hidden>
+		<div id="formPromptContainer" class="popup">
 			<form class="popup-content">
 				<header>
 					<span id="promptLabel"></span>
