--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -489,8 +489,8 @@
 			</li>
 			<li> <a id="icons">Icons</a>
 				<ul>
-					<li> Icon made by <a href="https://www.flaticon.com/authors/kiranshastry"
-							title="Kiranshastry">Kiranshastry</a> from <a href="https://www.flaticon.com/"
+					<li> Icon made by <a href="https://www.flaticon.com/authors/pixelmeetup"
+							title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/"
 							title="Flaticon">www.flaticon.com</a> is licensed by <a
 							href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
 							target="_blank">CC 3.0 BY</a> </li>
