--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>SingleFile help</title>
+	<title>SingleFileZ help</title>
 	<link rel="stylesheet" href="help.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
@@ -11,7 +11,7 @@
 <body>
 	<div>
 		<div id="titleBorder">
-			<h2>SingleFile</h2>
+			<h2>SingleFileZ</h2>
 			<h4>Save a complete page into a single HTML file</h4>
 		</div> <span id="index"> <a href="#getting-started">Getting started</a> - <a href="#general-notes">Additional
 				notes</a> - <a href="#options">Options description</a> - <a href="#notes">Technical notes</a> - <a
@@ -24,15 +24,15 @@
 				<ul>
 					<li>Wait until the page is fully loaded, you may need to scroll down the entire page to be sure all
 						elements are loaded.</li>
-					<li>Click on the SingleFile button <img src="../resources/icon_16.png" class="icon"> in the
+					<li>Click on the SingleFileZ button <img src="../resources/icon_16.png" class="icon"> in the
 						extension toolbar to save the page.</li>
 				</ul>
 			</li>
 			<li> <a id="general-notes">Additional notes</a>
 				<ul>
-					<li>To save multiple tabs, select them first and click on the SingleFile button <img
+					<li>To save multiple tabs, select them first and click on the SingleFileZ button <img
 							src="../resources/icon_16.png" class="icon">.</li>
-					<li> Open the context menu by right-clicking the SingleFile button <img
+					<li> Open the context menu by right-clicking the SingleFileZ button <img
 							src="../resources/icon_16.png" class="icon"> in the extension toolbar or on the webpage. It
 						allows you to save: <ul>
 							<li>the current tab,</li>
@@ -52,11 +52,11 @@
 							<li>or all the tabs.</li>
 						</ul>
 					</li>
-					<li>You can interrupt the saving progress by clicking on the SingleFile button when processing a
+					<li>You can interrupt the saving progress by clicking on the SingleFileZ button when processing a
 						page.</li>
 					<li>With auto-save active, pages are automatically saved every time after being loaded (or before
 						being unloaded if not). </li>
-					<li>Right-click on the SingleFile button and select "Options" to open the options page.</li>
+					<li>Right-click on the SingleFileZ button and select "Options" to open the options page.</li>
 					<li> The default save folder is the download folder configured in your browser, cf.
 						about:preferences in Firefox and chrome://settings in Chrome. </li>
 					<li>You can use the shortcut Ctrl+Shift+Y to save the current tab or the selected tabs. Go to <a
@@ -65,7 +65,7 @@
 				</ul>
 			</li>
 			<li> <a id="options">Options description</a>
-				<p>You can customize SingleFile through the options page. Right-click on SingleFile button <img
+				<p>You can customize SingleFileZ through the options page. Right-click on SingleFileZ button <img
 						src="../resources/icon_16.png" class="icon"> in the browser toolbar and select "Options"/"Manage
 					extension" in the context menu to open the options page.</p>
 				<p>Profiles</p>
@@ -77,7 +77,7 @@
 							respectively to create, delete and rename a profile. </p>
 					</li>
 					<li>
-						<p> You can select the default profile through the context menu of SingleFile. The selection is
+						<p> You can select the default profile through the context menu of SingleFileZ. The selection is
 							persistent and applied to all tabs. </p>
 					</li>
 					<li>
@@ -90,14 +90,14 @@
 				<ul>
 					<li data-options-label="addMenuEntryLabel"> <span class="option">Option: add entry in the context
 							menu of the webpage</span>
-						<p>Check this option to display an entry for SingleFile in the context menu of the webpage. The
-							context menu of the SingleFile button <img src="../resources/icon_16.png" class="icon"> in
+						<p>Check this option to display an entry for SingleFileZ in the context menu of the webpage. The
+							context menu of the SingleFileZ button <img src="../resources/icon_16.png" class="icon"> in
 							the extension toolbar is displayed wether this option is checked or not. </p>
 						<p class="notice">It is recommended to <u>check</u> this option</p>
 					</li>
 					<li data-options-label="shadowEnabledLabel"> <span class="option">Option: overlay a shadow on the
 							page during processing</span>
-						<p>Check this option to overlay a shadow on the page when SingleFile is retrieving page
+						<p>Check this option to overlay a shadow on the page when SingleFileZ is retrieving page
 							resources. This reminds you that you should not close the tab. </p>
 						<p class="notice">It is recommended to <u>check</u> this option</p>
 					</li>
@@ -149,15 +149,15 @@
 						<p>Template examples:</p>
 						<ul>
 							<li><code>{page-title} ({date-iso} {time-locale}).html</code> will produce filenames like
-								"Introduction to SingleFile (2018-09-15 11_06_03 PM).html" for a page having
-								"Introduction to SingleFile" as title.</li>
+								"Introduction to SingleFileZ (2018-09-15 11_06_03 PM).html" for a page having
+								"Introduction to SingleFileZ" as title.</li>
 							<li><code>archives/{url-last-segment} - {date-iso}</code> will produce filenames like
 								"welcome - 2018-09-15" for a page hosted on https://example.com/welcome.html. The saved
 								files will be saved in the sub-directory "archives".</li>
 							<li><code>archives/{year-locale}/{month-locale}/{day-locale}/{page-title}.html</code> will
-								produce filenames like "Introduction to SingleFile.html" stored into 3 sub-directories
+								produce filenames like "Introduction to SingleFileZ.html" stored into 3 sub-directories
 								in the "archives" folder, one for each part of the save date (e.g.
-								"2018/9/15/Introduction to SingleFile.html").</li>
+								"2018/9/15/Introduction to SingleFileZ.html").</li>
 						</ul>
 					</li>
 					<li data-options-label="confirmFilenameLabel"> <span class="option">Option: open the "Save as"
@@ -432,7 +432,7 @@
 					<li> All browsers <ul>
 							<li>For security reasons, you cannot save pages hosted on https://chrome.google.com,
 								https://addons.mozilla.org and some other Mozilla domains. When this happens, 🚫 is
-								displayed on top of the SingleFile icon.</li>
+								displayed on top of the SingleFileZ icon.</li>
 							<li>The last saved path cannot be remembered by default. To circumvent this limitation,
 								disable the option "Misc. &gt; Save pages in background".</li>
 							<li>The following characters are replaced with _ in filenames: ~, \, ?, %, *, :, |, ", &lt;,
@@ -458,12 +458,12 @@
 				<p>Please follow these steps if you find an unknown issue:</p>
 				<ul>
 					<li>Save the page in incognito.</li>
-					<li>If saving page in incognito did not fix the issue, reset SingleFile options.</li>
+					<li>If saving page in incognito did not fix the issue, reset SingleFileZ options.</li>
 					<li>If resetting options did not fix the issue, restart the browser.</li>
 					<li>If restarting the browser did not fix the issue, try to disable all other extensions to see if
 						there is a conflict.</li>
 					<li>If there is a conflict then try to determine against which extension(s).</li>
-					<li>Please report the issue <a href="https://github.com/gildas-lormeau/SingleFile/issues">here</a>
+					<li>Please report the issue <a href="https://github.com/gildas-lormeau/SingleFileZ/issues">here</a>
 						with a short description on how to reproduce it.</li>
 				</ul>
 				<p>Suggestions are welcome :)</p>
