--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -12,7 +12,7 @@
 	<div>
 		<div id="titleBorder">
 			<h2>SingleFileZ</h2>
-			<h4>Save a complete page into a single HTML file</h4>
+			<h4>Save a complete page into a single self-extracting HTML/ZIP file</h4>
 		</div> <span id="index"> <a href="#getting-started">Getting started</a> - <a href="#general-notes">Additional
 				notes</a> - <a href="#options">Options description</a> - <a href="#notes">Technical notes</a> - <a
 				href="#template-variables">Template variables</a> - <a href="#known-issues">Known issues</a> - <a
