added "save pages in background" option (fixes #26 and workaround for #25)

--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -183,6 +183,10 @@
 		<details>
 			<summary id="miscLabel"></summary>
 			<div class="option">
+				<label for="backgroundSaveInput" id="backgroundSaveLabel"></label>
+				<input type="checkbox" id="backgroundSaveInput">
+			</div>
+			<div class="option">
 				<label for="displayStatsInput" id="displayStatsLabel"></label>
 				<input type="checkbox" id="displayStatsInput">
 			</div>
@@ -294,7 +298,8 @@
 			</form>
 		</div>
 	</main>
-	<script type="text/javascript" src="/extension/lib/single-file/browser-polyfill/chrome-browser-polyfill.js"></script>
+	<script type="text/javascript"
+		src="/extension/lib/single-file/browser-polyfill/chrome-browser-polyfill.js"></script>
 	<script type="text/javascript" src="../bg/ui-options.js"></script>
 </body>
 
