--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -322,6 +322,14 @@
 				</ul>
 				<p>Misc.</p>
 				<ul>
+					<li data-options-label="backgroundSaveLabel"> <span class="option">Option: save pages in
+							background</span>
+						<p>Uncheck this option if you get invalid file names like
+							"37bec68b-446a-46a5-8642-19a89c231b46.html" or interrupted downloads when saving pages. You
+							can also uncheck this option if you want the "Save as" dialog to remember the last saved
+							path. Unchecking this option prevent using sub-directories in filename templates.</p>
+						<p class="notice">It is recommended to <u>check</u> this option</p>
+					</li>
 					<li data-options-label="displayStatsLabel"> <span class="option">Option: display stats in the
 							console after processing</span>
 						<p>Check this option to display stats about processing in the JavaScript developer tools of your
