added option "save to Google Drive"

--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -202,6 +202,10 @@
 				<label for="saveRawPageInput" id="saveRawPageLabel"></label>
 				<input type="checkbox" id="saveRawPageInput">
 			</div>
+			<div class="option">
+				<label for="saveToGDriveInput" id="saveToGDriveLabel"></label>
+				<input type="checkbox" id="saveToGDriveInput">
+			</div>
 		</details>
 		<details>
 			<summary id="autoSettingsLabel"></summary>
