--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -351,6 +351,20 @@
 							be enabled and "save deferred images" to be disabled.</p>
 						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
 					</li>
+					<li data-options-label="saveToGDriveLabel"> <span class="option">Option: save to Google Drive</span>
+						<p>Check this option to save the page on Google Drive instead of downloading it on your
+							computer. Checking this option will force some "File name" options to be disabled.
+							However, you can change the value of the "File name &gt; template" option to save files into
+							sub-folders, e.g. "<code>SingleFileZ/{page-title} ({date-iso} {time-locale}).html</code>" to
+							save pages in the folder named "SingleFileZ".
+						</p>
+						<p>
+							The permissions requested by SingleFileZ allow it to access only to the files and folders it
+							has created. When you uncheck this option, SingleFileZ revokes automatically its access to
+							your Google Drive account.
+						</p>
+						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
+					</li>
 				</ul>
 				<p id="auto-settings-rules">Auto-settings rules</p>
 				<ul>
