replaced "SingleFile" occurences with "SingleFileZ"

--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>SingleFile options</title>
+	<title>SingleFileZ options</title>
 	<link rel="stylesheet" href="options.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
