--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -22,10 +22,10 @@
 		<ol>
 			<li> <a id="getting-started">Getting started</a>
 				<ul>
-					<li>Wait until the page is fully loaded, you may need to scroll down the entire page to be sure all
-						elements are loaded.</li>
-					<li>Click on the SingleFileZ button <img src="../resources/icon_16.png" class="icon"> in the
-						extension toolbar to save the page.</li>
+					<li>Wait until the page is fully loaded.</li>
+					<li>Click on the SingleFileZ button in the extension toolbar <img src="../resources/icon_16.png"
+							class="icon"> to process and save the page.</li>
+					<li>You can click again on the button to cancel the action when processing a page.</li>
 				</ul>
 			</li>
 			<li> <a id="general-notes">Additional notes</a>
@@ -52,16 +52,15 @@
 							<li>or all the tabs.</li>
 						</ul>
 					</li>
-					<li>You can interrupt the saving progress by clicking on the SingleFileZ button when processing a
-						page.</li>
 					<li>With auto-save active, pages are automatically saved every time after being loaded (or before
 						being unloaded if not). </li>
 					<li>Right-click on the SingleFileZ button and select "Options" to open the options page.</li>
-					<li> The default save folder is the download folder configured in your browser, cf.
+					<li>Enable the option "Misc. &gt; save to Google Drive" to upload pages to Google Drive</li>
+					<li>You can use the customizable shortcut Ctrl+Shift+Y to save the current tab or the selected tabs.
+						Go to about:addons and select "Manage extension shortcuts" in the cogwheel menu to change it in
+						Firefox. Go to chrome://extensions/shortcuts to change it in Chrome.</li>
+					<li>The default save folder is the download folder configured in your browser, cf.
 						about:preferences in Firefox and chrome://settings in Chrome. </li>
-					<li>You can use the shortcut Ctrl+Shift+Y to save the current tab or the selected tabs. Go to <a
-							href="chrome://extensions/shortcuts">chrome://extensions/shortcuts</a> to change it in
-						Chrome.</li>
 				</ul>
 			</li>
 			<li> <a id="options">Options description</a>
