--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -210,6 +210,10 @@
 				<label for="saveCreatedBookmarksInput" id="saveCreatedBookmarksLabel"></label>
 				<input type="checkbox" id="saveCreatedBookmarksInput">
 			</div>
+			<div class="option second-level">
+				<label for="replaceBookmarkURLInput" id="replaceBookmarkURLLabel"></label>
+				<input type="checkbox" id="replaceBookmarkURLInput">
+			</div>
 		</details>
 		<details>
 			<summary id="autoSettingsLabel"></summary>
