replaced some SingleFile occurences with SingleFileZ

--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -368,7 +368,7 @@
 							newly created bookmark</span>
 						<p>
 							Check this option to save pages that you add into your bookmarks. Note that if the page is
-							to be saved is not already displayed in a tab, SingleFile will open temporarily
+							to be saved is not already displayed in a tab, SingleFileZ will open temporarily
 							a new tab to save the page.
 						</p>
 						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
