--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -266,7 +266,7 @@
 			</div>
 		</details>
 		<div class="option bottom">
-			<a href="help.html" target="SingleFileHelpPage" id="helpLabel"></a>
+			<a href="help.html" target="SingleFileZHelpPage" id="helpLabel"></a>
 			<div class="buttons">
 				<div class="sync-input">
 					<input type="checkbox" id="synchronizeInput">
