--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -58,6 +58,10 @@
 				<input type="text" id="filenameTemplateInput">
 			</div>
 			<div class="option">
+				<label for="filenameMaxLengthInput" id="filenameMaxLengthLabel"></label>
+				<input type="number" id="filenameMaxLengthInput" min="1">
+			</div>
+			<div class="option">
 				<label for="confirmFilenameInput" id="confirmFilenameLabel"></label>
 				<input type="checkbox" id="confirmFilenameInput">
 			</div>
