--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -71,6 +71,7 @@
 					<option id="filenameConflictActionUniquifyLabel" value="uniquify"></option>
 					<option id="filenameConflictActionOverwriteLabel" value="overwrite"></option>
 					<option id="filenameConflictActionPromptLabel" value="prompt"></option>
+					<option id="filenameConflictActionSkipLabel" value="skip"></option>
 				</select>
 			</div>
 		</details>
