--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -91,7 +91,7 @@
 							menu of the webpage</span>
 						<p>Check this option to display an entry for SingleFileZ in the context menu of the webpage. The
 							context menu of the SingleFileZ button <img src="../resources/icon_16.png" class="icon"> in
-							the extension toolbar is displayed wether this option is checked or not. </p>
+							the extension toolbar is displayed whether this option is checked or not. </p>
 						<p class="notice">It is recommended to <u>check</u> this option</p>
 					</li>
 					<li data-options-label="shadowEnabledLabel"> <span class="option">Option: overlay a shadow on the
