added option "ZIP content > create a root directory"

--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -185,13 +185,6 @@
 							altering the document.</p>
 						<p class="notice">It is recommended to <u>check</u> this option</p>
 					</li>
-					<li data-options-label="insertTextBodyLabel"> <span class="option">Option: make text
-							searchable</span>
-						<p>Check this option to insert the text content of the saved page into the auto-extracting HTML
-							file. This allows you, for example, to search for saved pages by text. Unchecking this
-							option will reduce the size of the saved file.</p>
-						<p class="notice">It is recommended to <u>check</u> this option</p>
-					</li>
 					<li data-options-label="removeImportsLabel"> <span class="option">Option: remove HTML imports</span>
 						<p>Check this option to remove all link elements used to import HTML documents. Checking this
 							option can help to reduce the size of the file without altering the document.</p>
@@ -212,6 +205,22 @@
 					<li data-options-label="includeInfobarLabel">Option: include infobar in the saved page
 						<p>Check this option to display the ℹ button at the top right of the page when viewing a saved
 							page in a browser where SingleFileZ is not installed.</p>
+					</li>
+				</ul>
+				<p>ZIP content</p>
+				<ul>
+					<li data-options-label="insertTextBodyLabel"> <span class="option">Option: make text
+							searchable</span>
+						<p>Check this option to insert the text content of the saved page into the auto-extracting HTML
+							file. This makes it possible, for example, to search for pages from the text.</p>
+						<p class="notice">It is recommended to <u>check</u> this option</p>
+					</li>
+					<li data-options-label="createRootDirectoryLabel"> <span class="option">Option: create a root
+							directory</span>
+						<p>Check this option to create a root directory in the zip file. The directory name consists of
+							a timestamp and the identifier of the tab where the saved page is displayed.
+						</p>
+						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
 					</li>
 				</ul>
 				<p>Stylesheets</p>
