--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -82,10 +82,6 @@
 				<input type="checkbox" id="compressHTMLInput">
 			</div>
 			<div class="option">
-				<label for="insertTextBodyInput" id="insertTextBodyLabel"></label>
-				<input type="checkbox" id="insertTextBodyInput">
-			</div>
-			<div class="option">
 				<label for="removeImportsInput" id="removeImportsLabel"></label>
 				<input type="checkbox" id="removeImportsInput">
 			</div>
@@ -100,6 +96,17 @@
 			<div class="option">
 				<label for="includeInfobarInput" id="includeInfobarLabel"></label>
 				<input type="checkbox" id="includeInfobarInput">
+			</div>
+		</details>
+		<details>
+			<summary id="zipContentLabel"></summary>
+			<div class="option">
+				<label for="insertTextBodyInput" id="insertTextBodyLabel"></label>
+				<input type="checkbox" id="insertTextBodyInput">
+			</div>
+			<div class="option">
+				<label for="createRootDirectoryInput" id="createRootDirectoryLabel"></label>
+				<input type="checkbox" id="createRootDirectoryInput">
 			</div>
 		</details>
 		<details>
