added option "Zip content > create self extracting archives"

--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -209,9 +209,15 @@
 				</ul>
 				<p>ZIP content</p>
 				<ul>
+					<li data-options-label="selfExtractingArchiveLabel"> <span class="option">Option: create self
+							extracting archives</span>
+						<p>Check this option to generate HTML files that can unzip themselves. Unchecking this option
+							produces plain zip files that cannot be displayed in a browser but are smaller.</p>
+						<p class="notice">It is recommended to <u>check</u> this option</p>
+					</li>
 					<li data-options-label="insertTextBodyLabel"> <span class="option">Option: make text
 							searchable</span>
-						<p>Check this option to insert the text content of the saved page into the auto-extracting HTML
+						<p>Check this option to insert the text content of the saved page into the self-extracting HTML
 							file. This makes it possible, for example, to search for pages from the text.</p>
 						<p class="notice">It is recommended to <u>check</u> this option</p>
 					</li>
