--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -101,6 +101,10 @@
 		<details>
 			<summary id="zipContentLabel"></summary>
 			<div class="option">
+				<label for="selfExtractingArchiveInput" id="selfExtractingArchiveLabel"></label>
+				<input type="checkbox" id="selfExtractingArchiveInput">
+			</div>
+			<div class="option second-level">
 				<label for="insertTextBodyInput" id="insertTextBodyLabel"></label>
 				<input type="checkbox" id="insertTextBodyInput">
 			</div>
