add option "ZIP content > password"

--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -105,6 +105,10 @@
 		<details>
 			<summary id="zipContentLabel"></summary>
 			<div class="option">
+				<label for="passwordInput" id="passwordLabel"></label>
+				<input type="text" id="passwordInput">
+			</div>
+			<div class="option">
 				<label for="selfExtractingArchiveInput" id="selfExtractingArchiveLabel"></label>
 				<input type="checkbox" id="selfExtractingArchiveInput">
 			</div>
