--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -216,6 +216,12 @@
 				</ul>
 				<p>ZIP content</p>
 				<ul>
+					<li data-options-label="passwordLabel"> <span class="option">Option: password</span>
+						<p>Type a password to encrypt zip files with AES-256 (compatible with Winzip). Be careful, if
+							you lose the password, it will be impossible to open the file. Enabling this otpion
+							increases the CPU consumption and the time needed to save or read a page.</p>
+						<p class="notice">It is recommended to <u>leave empty</u> this option</p>
+					</li>
 					<li data-options-label="selfExtractingArchiveLabel"> <span class="option">Option: create self
 							extracting archives</span>
 						<p>Check this option to generate HTML files that can unzip themselves. Unchecking this option
