fix input layout

--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -104,7 +104,7 @@
 		</details>
 		<details>
 			<summary id="zipContentLabel"></summary>
-			<div class="option">
+			<div class="option vertical">
 				<label for="passwordInput" id="passwordLabel"></label>
 				<input type="text" id="passwordInput">
 			</div>
