--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -146,7 +146,8 @@
 							cannot exceed 192 characters and are truncated if longer. The invalid characters are:
 							<code>[</code> <code>~</code> <code>+</code> <code>\</code> <code>?</code> <code>%</code>
 							<code>*</code> <code>:</code> <code>|</code> <code>"</code> <code>&lt;</code>
-							<code>&gt;</code> and control characters from 0 to 31 in the ASCII table.</p>
+							<code>&gt;</code> and control characters from 0 to 31 in the ASCII table.
+						</p>
 						<p>Template examples:</p>
 						<ul>
 							<li><code>{page-title} ({date-iso} {time-locale}).html</code> will produce filenames like
