--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -205,7 +205,8 @@
 							considerably reduce the size of the file without altering the document most of the time. It
 							may also decrease the time needed to save a page.</p>
 					</li>
-					<li data-options-label="includeInfobarLabel">Option: include infobar in the saved page
+					<li data-options-label="includeInfobarLabel"> <span class="option"></span>Option: include infobar in
+						the saved page</span>
 						<p>Check this option to display the ℹ button at the top right of the page when viewing a saved
 							page in a browser where SingleFileZ is not installed.</p>
 					</li>
