--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -373,7 +373,7 @@
 						<p>Check this option to auto-save pages after being loaded. If you browse to another page before
 							the page is fully loaded then the page will be saved just before being unloaded. With this
 							option active, you are guaranteed pages will always be saved. Some frame contents may be
-							missing (if you unchecked "remove frames") when pages are saved before being unloaded. </p>
+							missing (if you checked "remove frames") when pages are saved before being unloaded. </p>
 					</li>
 					<li data-options-label="autoSaveLoadLabel"> <span class="option">Option: auto-save after page
 							load</span>
@@ -383,7 +383,7 @@
 							unload</span>
 						<p>Check this option to auto-save pages before being unloaded instead of saving pages after
 							being loaded. With this option active, you are guaranteed pages will always be saved but
-							some frame contents may be missing (if you unchecked "remove frames"). </p>
+							some frame contents may be missing (if you checked "remove frames"). </p>
 					</li>
 					<li data-options-label="autoSaveDelayLabel"> <span class="option">Option: auto-save waiting delay
 							after load (s)</span>
