--- a/extension/core/bg/background.html
+++ b/extension/core/bg/background.html
@@ -13,6 +13,7 @@
 	<script src="/dist/infobar.js"></script>
 	<script src="/extension/core/common/page-proto.js"></script>
 	<script type="module" src="/extension/core/bg/messages.js"></script>
+	<script type="module" src="/extension/ui/bg/ui-commands.js"></script>
 	<script type="module" src="/extension/lib/single-file/fetch/bg/fetch.js"></script>
 	<script type="module" src="/extension/lib/single-file/frame-tree/bg/frame-tree.js"></script>
 	<script type="module" src="/extension/lib/single-file/lazy/bg/lazy-timeout.js"></script>
