add option "auto-save on tab discard"

--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -223,6 +223,10 @@
 				<input type="checkbox" id="autoSaveUnloadInput">
 			</div>
 			<div class="option">
+				<label for="autoSaveDiscardInput" id="autoSaveDiscardLabel"></label>
+				<input type="checkbox" id="autoSaveDiscardInput">
+			</div>
+			<div class="option">
 				<label for="autoSaveDelayInput" id="autoSaveDelayLabel"></label>
 				<input type="number" id="autoSaveDelayInput" min="0">
 			</div>
