update help page

--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -387,6 +387,11 @@
 							being loaded. With this option active, you are guaranteed pages will always be saved but
 							some frame contents may be missing (if you checked "remove frames"). </p>
 					</li>
+					<li data-options-label="autoSaveDiscardLabel"> <span class="option">Option: auto-save on tab
+							discard</span>
+						<p>Check this option to auto-save pages when discarding or closing a tab. Some frame contents
+							may be missing (if you checked "remove frames"). </p>
+					</li>
 					<li data-options-label="autoSaveDelayLabel"> <span class="option">Option: auto-save waiting delay
 							after load (s)</span>
 						<p>Specify the delay in seconds to wait before saving a page when the "auto-save on page load or
